fix dark mode

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -240,7 +240,7 @@ body {
 
 /* dark mode handle */
 
-@media screen and (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
     html {
         scroll-behavior: smooth;
     }
